--- a/MajdataEdit-Neo.csproj
+++ b/MajdataEdit-Neo.csproj
@@ -27,4 +27,16 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="Lingfeng-bbben.AvaloniaEdit.TextMate" Version="11.0.6" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="ViewLocator.cs">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="simai.tmLanguage.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
