--- a/MajdataEdit-Neo.csproj
+++ b/MajdataEdit-Neo.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="Lingfeng-bbben.AvaloniaEdit.TextMate" Version="11.0.6" />
     <PackageReference Include="Lingfeng-bbben.MajSimai" Version="1.1.0" />
+    <PackageReference Include="ManagedBass" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
