--- a/MajdataEdit-Neo.csproj
+++ b/MajdataEdit-Neo.csproj
@@ -14,7 +14,6 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.2.4" />
-    <PackageReference Include="Avalonia.AvaloniaEdit" Version="11.1.0" />
     <PackageReference Include="Avalonia.Desktop" Version="11.2.4" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.4" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.4" />
@@ -24,8 +23,9 @@
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="Lingfeng-bbben.AvaloniaEdit" Version="11.0.6.1" />
     <PackageReference Include="Lingfeng-bbben.AvaloniaEdit.TextMate" Version="11.0.6" />
-    <PackageReference Include="Lingfeng-bbben.MajSimai" Version="1.2.0" />
+    <PackageReference Include="Lingfeng-bbben.MajSimai" Version="1.5.0" />
     <PackageReference Include="ManagedBass" Version="3.1.1" />
   </ItemGroup>
 
