--- a/MajdataEdit-Neo.csproj
+++ b/MajdataEdit-Neo.csproj
@@ -25,8 +25,9 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="Lingfeng-bbben.AvaloniaEdit" Version="11.0.6.1" />
     <PackageReference Include="Lingfeng-bbben.AvaloniaEdit.TextMate" Version="11.0.6" />
-    <PackageReference Include="Lingfeng-bbben.MajSimai" Version="1.6.0" />
+    <PackageReference Include="Lingfeng-bbben.MajSimai" Version="1.8.0" />
     <PackageReference Include="ManagedBass" Version="3.1.1" />
+    <PackageReference Include="MessageBox.Avalonia" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
