--- a/MajdataEdit-Neo.csproj
+++ b/MajdataEdit-Neo.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Lingfeng-bbben.MajSimai" Version="1.10.0" />
     <PackageReference Include="ManagedBass" Version="3.1.1" />
     <PackageReference Include="MessageBox.Avalonia" Version="3.2.0" />
+    <PackageReference Include="WebSocketSharp-netstandard" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
